--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
+# NetBeans specific #
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+licenseheader.txt
+
+# Class Files #
 *.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
